Criado modelo de página de cadastro simples.
	- Cadastro de categoria
	-- Listagem
	-- Modal novo registro
	
Ajustado links do menu esquerdo

--- a/module/Basico/view/layout/layout.phtml
+++ b/module/Basico/view/layout/layout.phtml
@@ -21,6 +21,7 @@
 	<link href="/assets/css/plugins.css" rel="stylesheet" type="text/css" />
 	<link href="/assets/css/responsive.css" rel="stylesheet" type="text/css" />
 	<link href="/assets/css/icons.css" rel="stylesheet" type="text/css" />
+	<link href="/assets/css/app/geral.css" rel="stylesheet" type="text/css" /> <!-- AnoteTudo -->
 
 	<link rel="stylesheet" href="/assets/css/fontawesome/font-awesome.min.css">
 	<!--[if IE 7]>
@@ -84,12 +85,23 @@
 	<!-- Forms -->
 	<script type="text/javascript" src="/plugins/uniform/jquery.uniform.min.js"></script>
 	<script type="text/javascript" src="/plugins/select2/select2.min.js"></script>
+	
+	<!-- DataTables -->
+    <script type="text/javascript" src="/plugins/datatables/jquery.dataTables.min.js"></script>
+    <script type="text/javascript" src="/plugins/datatables/tabletools/TableTools.min.js"></script> <!-- optional -->
+    <script type="text/javascript" src="/plugins/datatables/colvis/ColVis.min.js"></script> <!-- optional -->
+    <script type="text/javascript" src="/plugins/datatables/columnfilter/jquery.dataTables.columnFilter.js"></script> <!-- optional -->
+    <script type="text/javascript" src="/plugins/datatables/DT_bootstrap.js"></script>
 
 	<!-- App -->
 	<script type="text/javascript" src="/assets/js/app.js"></script>
 	<script type="text/javascript" src="/assets/js/plugins.js"></script>
 	<script type="text/javascript" src="/assets/js/plugins.form-components.js"></script>
 
+	<!-- Bootstrap Dialog -->
+    <script src="/plugins/bootstrap3-dialog/js/bootstrap-dialog.js"></script>
+    <link rel="stylesheet" href="/plugins/bootstrap3-dialog/css/bootstrap-dialog.css">
+    
 	<script>
 	$(document).ready(function(){
 		"use strict";
@@ -99,12 +111,7 @@
 		FormComponents.init(); // Init all form-specific plugins
 	});
 	</script>
-
-	<!-- Demo JS -->
-	<script type="text/javascript" src="/assets/js/custom.js"></script>
-	<script type="text/javascript" src="/assets/js/demo/pages_calendar.js"></script>
-	<script type="text/javascript" src="/assets/js/demo/charts/chart_filled_blue.js"></script>
-	<script type="text/javascript" src="/assets/js/demo/charts/chart_simple.js"></script>
+	
 </head>
 
 <body>
@@ -511,268 +518,46 @@
 
 				<!--=== Navigation ===-->
 				<ul id="nav">
-					<li class="current">
+					<li>
 						<a href="index.html">
 							<i class="icon-dashboard"></i>
 							Dashboard
 						</a>
-					</li>
-					<li>
-						<a href="javascript:void(0);">
-							<i class="icon-desktop"></i>
-							UI Features
-							<span class="label label-info pull-right">6</span>
-						</a>
-						<ul class="sub-menu">
-							<li>
-								<a href="ui_general.html">
-								<i class="icon-angle-right"></i>
-								General
-								</a>
-							</li>
-							<li>
-								<a href="ui_buttons.html">
-								<i class="icon-angle-right"></i>
-								Buttons
-								</a>
-							</li>
-							<li>
-								<a href="ui_tabs_accordions.html">
-								<i class="icon-angle-right"></i>
-								Tabs &amp; Accordions
-								</a>
-							</li>
-							<li>
-								<a href="ui_sliders.html">
-								<i class="icon-angle-right"></i>
-								Sliders
-								</a>
-							</li>
-							<li>
-								<a href="ui_nestable_list.html">
-								<i class="icon-angle-right"></i>
-								Nestable List
-								</a>
-							</li>
-							<li>
-								<a href="ui_typography.html">
-								<i class="icon-angle-right"></i>
-								Typography / Icons
-								</a>
-							</li>
-							<li>
-								<a href="ui_google_maps.html">
-								<i class="icon-angle-right"></i>
-								Google Maps
-								</a>
-							</li>
-							<li>
-								<a href="ui_grid.html">
-								<i class="icon-angle-right"></i>
-								Grid
-								</a>
-							</li>
-						</ul>
-					</li>
-					<li>
+					</li>					
+					<li class="current">
 						<a href="javascript:void(0);">
 							<i class="icon-edit"></i>
-							Form Elements
+							Cadastros
 						</a>
 						<ul class="sub-menu">
-							<li>
-								<a href="form_components.html">
+                            <li>
+								<a href="/cadastro/banco">
 								<i class="icon-angle-right"></i>
-								Form Components
+								Banco
+								</a>
+							</li>
+							<li class="current">
+								<a href="/cadastro/categoria">
+								<i class="icon-angle-right"></i>
+								Categoria
 								</a>
 							</li>
 							<li>
-								<a href="form_layouts.html">
+								<a href="/cadastro/forma-pagamento">
 								<i class="icon-angle-right"></i>
-								Form Layouts
+								Forma de Pagamento
 								</a>
 							</li>
 							<li>
-								<a href="form_validation.html">
+								<a href="/cadastro/fornecedor">
 								<i class="icon-angle-right"></i>
-								Form Validation
-								</a>
-							</li>
-							<li>
-								<a href="form_wizard.html">
-								<i class="icon-angle-right"></i>
-								Form Wizard
+								Fornecedor
 								</a>
 							</li>
 						</ul>
-					</li>
-					<li>
-						<a href="javascript:void(0);">
-							<i class="icon-table"></i>
-							Tables
-						</a>
-						<ul class="sub-menu">
-							<li>
-								<a href="tables_static.html">
-								<i class="icon-angle-right"></i>
-								Static Tables
-								</a>
-							</li>
-							<li>
-								<a href="tables_dynamic.html">
-								<i class="icon-angle-right"></i>
-								Dynamic Tables (DataTables)
-								</a>
-							</li>
-							<li>
-								<a href="tables_responsive.html">
-								<i class="icon-angle-right"></i>
-								Responsive Tables
-								</a>
-							</li>
-						</ul>
-					</li>
-					<li>
-						<a href="charts.html">
-							<i class="icon-bar-chart"></i>
-							Charts &amp; Statistics
-						</a>
-					</li>
-					<li>
-						<a href="javascript:void(0);">
-							<i class="icon-folder-open-alt"></i>
-							Pages
-						</a>
-						<ul class="sub-menu">
-							<li>
-								<a href="login.html">
-								<i class="icon-angle-right"></i>
-								Login
-								</a>
-							</li>
-							<li>
-								<a href="pages_user_profile.html">
-								<i class="icon-angle-right"></i>
-								User Profile
-								</a>
-							</li>
-							<li>
-								<a href="pages_calendar.html">
-								<i class="icon-angle-right"></i>
-								Calendar
-								</a>
-							</li>
-							<li>
-								<a href="pages_invoice.html">
-								<i class="icon-angle-right"></i>
-								Invoice
-								</a>
-							</li>
-							<li>
-								<a href="404.html">
-								<i class="icon-angle-right"></i>
-								404 Page
-								</a>
-							</li>
-						</ul>
-					</li>
-					<li>
-						<a href="javascript:void(0);">
-							<i class="icon-list-ol"></i>
-							4 Level Menu
-						</a>
-						<ul class="sub-menu">
-							<li class="open-default">
-								<a href="javascript:void(0);">
-									<i class="icon-cogs"></i>
-									Item 1
-									<span class="arrow"></span>
-								</a>
-								<ul class="sub-menu">
-									<li class="open-default">
-										<a href="javascript:void(0);">
-											<i class="icon-user"></i>
-											Sample Link 1
-											<span class="arrow"></span>
-										</a>
-										<ul class="sub-menu">
-											<li class="current"><a href="javascript:void(0);"><i class="icon-remove"></i> Sample Link 1</a></li>
-											<li><a href="javascript:void(0);"><i class="icon-pencil"></i> Sample Link 1</a></li>
-											<li><a href="javascript:void(0);"><i class="icon-edit"></i> Sample Link 1</a></li>
-										</ul>
-									</li>
-									<li><a href="javascript:void(0);"><i class="icon-user"></i>  Sample Link 1</a></li>
-									<li><a href="javascript:void(0);"><i class="icon-external-link"></i>  Sample Link 2</a></li>
-									<li><a href="javascript:void(0);"><i class="icon-bell"></i>  Sample Link 3</a></li>
-								</ul>
-							</li>
-							<li>
-								<a href="javascript:void(0);">
-									<i class="icon-globe"></i>
-									Item 2
-									<span class="arrow"></span>
-								</a>
-								<ul class="sub-menu">
-									<li><a href="javascript:void(0);"><i class="icon-user"></i>  Sample Link 1</a></li>
-									<li><a href="javascript:void(0);"><i class="icon-external-link"></i>  Sample Link 1</a></li>
-									<li><a href="javascript:void(0);"><i class="icon-bell"></i>  Sample Link 1</a></li>
-								</ul>
-							</li>
-							<li>
-								<a href="javascript:void(0);">
-									<i class="icon-folder-open"></i>
-									Item 3
-								</a>
-							</li>
-						</ul>
-					</li>
-				</ul>
-				
-				<!-- /Navigation -->
-				<div class="sidebar-title">
-					<span>Notifications</span>
-				</div>
-				<ul class="notifications demo-slide-in"> <!-- .demo-slide-in is just for demonstration purposes. You can remove this. -->
-					<li style="display: none;"> <!-- style-attr is here only for fading in this notification after a specific time. Remove this. -->
-						<div class="col-left">
-							<span class="label label-danger"><i class="icon-warning-sign"></i></span>
-						</div>
-						<div class="col-right with-margin">
-							<span class="message">Server <strong>#512</strong> crashed.</span>
-							<span class="time">few seconds ago</span>
-						</div>
-					</li>
-					<li style="display: none;"> <!-- style-attr is here only for fading in this notification after a specific time. Remove this. -->
-						<div class="col-left">
-							<span class="label label-info"><i class="icon-envelope"></i></span>
-						</div>
-						<div class="col-right with-margin">
-							<span class="message"><strong>John</strong> sent you a message</span>
-							<span class="time">few second ago</span>
-						</div>
-					</li>
-					<li>
-						<div class="col-left">
-							<span class="label label-success"><i class="icon-plus"></i></span>
-						</div>
-						<div class="col-right with-margin">
-							<span class="message"><strong>Emma</strong>'s account was created</span>
-							<span class="time">4 hours ago</span>
-						</div>
-					</li>
-				</ul>
-
-				<div class="sidebar-widget align-center">
-					<div class="btn-group" data-toggle="buttons" id="theme-switcher">
-						<label class="btn active">
-							<input type="radio" name="theme-switcher" data-theme="bright"><i class="icon-sun"></i> Bright
-						</label>
-						<label class="btn">
-							<input type="radio" name="theme-switcher" data-theme="dark"><i class="icon-moon"></i> Dark
-						</label>
-					</div>
-				</div>
-
+					</li>					
+				</ul>				
+				<!-- /Navigation -->								
 			</div>
 			<div id="divider" class="resizeable"></div>
 		</div>
@@ -780,8 +565,7 @@
 
 		<div id="content">
 			<?php echo $this->content; ?>
-		</div>
-		
+		</div>	
 	</div>
 
 </body>
